
 * Catalan translation for sudoers from translationproject.org.

 * Norwegian Bokmaal translation for sudo from translationproject.org.

 * Greek translation for sudoers from translationproject.org

 * The sudo source tree has been reorganized to more closely resemble
   that of other gettext-enabled packages.

 * Sudo and its associated programs now link against a shared version
   of libsudo_util.

 * It is now possible to match an environment variable's value as
   well as its name using env_keep and env_check.  This can be used
   to preserve bash functions which would otherwise be removed from
   the environment.

What's new in Sudo 1.8.10p3?

 * Fixed expansion of %p in the prompt for "sudo -l" when rootpw,
   runaspw or targetpw is set.  Bug #639

 * Fixed matching of uids and gids which was broken in version 1.8.9.
   Bug #640

 * PAM credential initialization has been re-enabled.  It was
   unintentionally disabled by default in version 1.8.8.  The way
   credentials are initialized has also been fixed.  Bug #642.

 * Fixed a descriptor leak on Linux when determing boot time.  Sudo
   normally closes extra descriptors before running a command so
   the impact is limited.  Bug #645

 * Fixed flushing of the last buffer of data when I/O logging is
   enabled.  This bug, introduced in version 1.8.9, could cause
   incomplete command output on some systems.  Bug #646

What's new in Sudo 1.8.10p2?

 * Fixed a hang introduced in sudo 1.8.10 when timestamp_timeout
   is set to zero.

What's new in Sudo 1.8.10p1?

 * Fixed a bug introduced in sudo 1.8.10 that prevented the disabling
   of tty-based tickets.

 * Fixed a bug with netgated commands in "sudo -l command" that
   could cause the command to be listed even when it was explicitly
   denied.  This only affected list mode when a command was specified.
   Bug #636

What's new in Sudo 1.8.10?

 * It is now possible to disable network interface probing in